New feature#2:add skills page

--- a/Education.html
+++ b/Education.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container mt-3">
-  <h2>This is Alan Pittayaporn homepage</h2><br>
+  <h2>This is Alan Pittayaporn Education</h2><br>
   <ul class="nav nav-tabs">
     <li class="nav-item">
       <a class="nav-link active" href="index.html">Personal Info</a>
@@ -37,6 +37,7 @@
         <th>Education</th>
         <td>UTCC</td>
       </tr>
+
     </tbody>
   </table>
 </div>
