--- a/Skills.html
+++ b/Skills.html
@@ -10,10 +10,10 @@
 <body>
 
 <div class="container mt-3">
-  <h2>This is Alan Pittayaporn homepage</h2><br>
+  <h2>This is Alan Pittayaporn Skills</h2><br>
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Personal Info</a>
+      <a class="nav-link active" href="index.html">Personal Info</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="Education.html">Education</a>
@@ -34,32 +34,8 @@
     <tbody>
       <tr>
 		<td rowspan="7"><img src="images/alan.png" class="rounded mx-auto d-block" alt="Alan McDonald" width="200" height="356"></td>
-        <th>Name:</th>
-        <td>Pittayaporn</td>
-      </tr>
-      <tr>
-        <th>Surname:</th>
-        <td>Karsasom</td>
-      </tr>
-	  <tr>
-        <th>Age:</th>
-        <td>22</td>
-      </tr>
-	  <tr>
-        <th>Birthday:</th>
-        <td>3 October 2002</td>
-      </tr>
-	  <tr>
-        <th>Nationality:</th>
-        <td>Thai</td>
-      </tr>
-	  <tr>
-        <th>Current Address:</th>
-        <td>90/132 maestro19 Bankkok</td>
-      </tr>
-	  <tr>
-        <th>Email Address:</th>
-        <td>pittayaporn.wern@gmail.com</td>
+        <th>Skills</th>
+        <td>Speak chinese</td>
       </tr>
     </tbody>
   </table>
